# life-tracker-mcp-server

./: .gitignore  DEBUGGING.md  DEBUG_GUIDE_PYCHARM.md  DEPLOYMENT.md  GSI_SETUP.md  PYCHARM_SETUP.md  QUICK_DEBUG_START.md  README.md  START_DEBUGGING.md  debug_server.py  fastmcp.json  main.py  pyproject.toml  server.py  setup.sh  test_debug.py
.idea_runConfigurations/: MCP_Server_Debug.xml  Test_Debug.xml
